# phux

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD.md  DESIGN.md  DOLT_REMOTE.md  LICENSE-MIT  README.md  SPEC.md  VISION.md  book.toml  clippy.toml  commitlint.config.mjs  deny.toml  design-mcp-l2-tools.md  flake.nix  justfile  manifest  release-please-config.json  rust-toolchain.toml
clients/phux-vt-web/: .gitignore  Cargo.toml  README.md  build.rs
clients/phux-vt-web/src/: lib.rs
clients/phux-vt-web/tests/: smoke.rs
clients/phux-web/: .gitignore  Cargo.toml  README.md  index.html
clients/phux-web/.cargo/: config.toml
clients/phux-web/src/: client.rs  framing.rs  lib.rs  main.rs  session.rs
clients/phux-web/tests/: e2e_browser.rs  render.rs  session.rs
crates/phux/: Cargo.toml
crates/phux-client/: Cargo.toml
crates/phux-client-core/: Cargo.toml
crates/phux-client-core/src/: layout.rs  lib.rs  multi_pane.rs
crates/phux-client-core/src/layout/: mod.rs  serialize.rs
crates/phux-client-core/src/multi_pane/: layout.rs  mod.rs  mouse.rs  rasterize.rs
crates/phux-client-core/src/predict/: mod.rs  overlay.rs  reconcile.rs  state.rs
crates/phux-client-core/src/snapshots/: phux_client_core__multi_pane__tests__two_pane_h_split_80x24_focus_left.snap
crates/phux-client/src/: agent.rs  agent_meta.rs  ask.rs  layout.rs  layout_ops.rs  lib.rs  run.rs  selector.rs  send_keys.rs  snapshot.rs  state.rs  vcs.rs  wait.rs  watch.rs
crates/phux-client/src/attach/: action_registry.rs  actions.rs  connection.rs  copy.rs  driver.rs  exec_widgets.rs  fleet.rs  focus.rs  ghost_stress_tests.rs  input.rs  input_dispatch.rs  mod.rs  multi_pane.rs  onboarding.rs  paint.rs  plugin_actions.rs  plugin_panes.rs  quic.rs  reflow.rs  reload.rs  remote_tls.rs  render.rs  rendered.rs  repaint.rs  server_frame.rs  status_bar.rs  stdout_writer.rs  terminal_probe.rs  ws.rs
crates/phux-client/src/l2/: commands.rs  events.rs  mod.rs  state.rs
crates/phux-client/src/mirror/: apply.rs  mod.rs  snapshot.rs  state.rs
crates/phux-client/tests/: agent_api.rs  graceful_failure.rs  mirror_replay.rs  mirror_replay_proptest.rs  quic_dial.rs  sidebar_branch_e2e.rs  status_bar_pipeline.rs  ws_dial.rs
crates/phux-config/: Cargo.toml
crates/phux-config/src/: default.toml  distro.rs  error.rs  integration.rs  keybind.rs  layer.rs  lib.rs  loader.rs  plugin.rs  satellite.rs  scaffold.rs  schema.rs  widget.rs
crates/phux-config/tests/: agent_roundtrip.rs  distro.rs  herdr_distro.rs  keybind.rs  layers.rs  loader.rs  parse.rs  plugin.rs  plugin_examples.rs  provenance.rs  satellite.rs  scaffold.rs  widgets.rs
crates/phux-core/: Cargo.toml
crates/phux-core/src/: ids.rs  lib.rs  pane.rs  registry.rs  screen.rs  session.rs  session_list.rs  terminal.rs  window.rs
crates/phux-core/tests/: layout.rs  layout_proptest.rs  registry.rs
crates/phux-dial/: Cargo.toml
crates/phux-dial/src/: lib.rs  quic.rs  tls.rs  ws.rs
crates/phux-mcp/: Cargo.toml
crates/phux-mcp/src/: ask_tool.rs  cli_adapter.rs  cli_tools.rs  jsonrpc.rs  main.rs  plugin_action.rs  plugin_workspace.rs  socket.rs  tools.rs
crates/phux-plugin/: Cargo.toml
crates/phux-plugin/src/: launch.rs  lib.rs
crates/phux-plugin/tests/: action_runtime.rs  launch_runtime.rs
crates/phux-protocol/: Cargo.toml  README.md
crates/phux-protocol/src/: caps.rs  ids.rs  kitty_replay.rs  lib.rs  policy.rs  sgr.rs
crates/phux-protocol/tests/: diff_wire_snapshots.rs  frame_wire_snapshots.rs  wire_alloc_dos.rs  wire_layout_recursion.rs  wire_roundtrip.proptest-regressions  wire_roundtrip.rs
crates/phux-relay/: Cargo.toml
crates/phux-relay/src/: lib.rs  paths.rs  registry.rs  runtime.rs  splice.rs  tls.rs  tokens.rs
crates/phux-relay/tests/: relay_auth.rs  relay_lifecycle.rs  relay_routing.rs
crates/phux-server/: Cargo.toml  build.rs
crates/phux-server/benches/: capture.rs
crates/phux-server/examples/: diff_spike.rs  e2e-repro.rs  one_pane.rs  ws_demo_server.rs
crates/phux-server/rules/: claude.toml
crates/phux-server/src/: agent_asked.rs  agent_state.rs  auth.rs  cwd_query.rs  downsample.rs  extract.rs  grid.rs  hooks.rs  hub.rs  id_bridge.rs  lib.rs  pane_actor.rs  policy.rs  proc_query.rs  runtime.rs  search.rs  state.rs  telemetry.rs  terminal_actor.rs  transport.rs
crates/phux-server/tests/: agent_asked.rs  agent_detect.rs  agent_events.rs  attach_create_if_missing.rs  attach_cwd_snapshot.rs  attach_last.rs  attach_lifecycle.rs  attach_viewport_resize.rs  byc_6_1_attach_snapshot.rs  byc_6_3_detach_clean_shutdown.rs  byc_6_5_keystroke_merge_order.rs  byc_6_6_attach_unknown_session_error.rs  command_dispatch.rs  concurrent_attach_l2.rs  concurrent_attach_no_lag.rs  end_to_end.rs  eof_detach.rs  htop_keys.rs  hub_relay_federation.rs  hub_runtime.rs  hunt_grid_extract_edges.rs  hunt_grid_synthesis_roundtrip.rs  hunt_grid_unicode_bounds.rs  input_dispatch.rs  key_encode_snapshot.rs  kip_roundtrip.rs  l2_adversarial.rs  metadata_reply.rs  mouse_wheel_e2e.rs  multi_client_scenario.rs  perf_bursty_output.rs  perf_colored_output.rs  perf_latency.rs  phux_0q8_no_double_emit.rs  phux_3uv_acked_incremental.rs  phux_eb0_in_process_reattach.rs  phux_l0t_dirty_diagnosis.rs  pty_pump.rs  q0e_1_incremental_synthesis.rs  q0e_3_tick_scheduler.rs  (+23 more)
crates/phux/examples/: diagnose.rs  observe.rs  pty_drag_probe.rs  pty_resize_probe.rs  pty_screen.rs
crates/phux/src/: help_inventory.rs  main.rs  selector.rs
crates/phux/tests/: agent_record_e2e.rs  config_agents.rs  config_init_distro.rs  config_plugin_actions.rs  config_show_layers.rs  output_hygiene.rs  plugin_agent_bench_e2e.rs  plugin_demo_package.rs  plugin_install.rs  plugin_launch.rs  plugin_lifecycle.rs  run_wait_e2e.rs  satellite_lifecycle.rs  spatial_e2e.rs  stdio_bridge_e2e.rs  upgrade_e2e.rs  workspace_archive_e2e.rs  workspace_inspect.rs
crates/portable-pty-adopt/: Cargo.toml  README.md
crates/portable-pty-adopt/src/: lib.rs
crates/portable-pty-adopt/tests/: adopt_inprocess.rs  execve_roundtrip.rs
(+515 files in other folders)
