[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phall1/phux"
authors = ["Phil Hall <phallsignup@gmail.com>"]
homepage = "https://github.com/phall1/phux"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
# Pedantic exceptions: too noisy for our style.
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
# Internal.
phux-protocol = { path = "crates/phux-protocol", version = "0.0.1" }
phux-core = { path = "crates/phux-core", version = "0.0.0" }
phux-server = { path = "crates/phux-server", version = "0.0.0" }
phux-client = { path = "crates/phux-client", version = "0.0.0" }
phux-config = { path = "crates/phux-config", version = "0.0.0" }
phux-mcp = { path = "crates/phux-mcp", version = "0.0.0" }

# External.
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"
slotmap = "1"
smallvec = "1.15"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
# East Asian Width + Emoji presentation width lookup for the predict
# layer (phux-9gw.1.4). The predictive-echo state needs to know how many
# terminal cells a Unicode scalar consumes before queueing a prediction —
# width-2 CJK / emoji must advance the predict cursor by 2 cells and
# refuse to predict at `cursor_col + 2 > cols`. `unicode-width` is the
# canonical zero-dep crate for this (Unicode 16, single small table),
# used by `ratatui`, `crossterm`, and `tui-rs`. No alternative ships
# both EAW and emoji presentation tables in a single lookup.
unicode-width = "0.2"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
dhat = "0.3"
tokio = { version = "1", features = ["macros", "rt", "net", "io-util", "sync", "signal", "time", "process"] }
portable-pty = "0.8"
# Chrome-layer TUI toolkit for phux-client (status bar, dividers, overlays).
# Confined to `crates/phux-client/src/render/` by a CI grep guard
# (`scripts/check-ratatui-boundary.sh`); pane interiors stay on libghostty.
# See epic phux-5ke. Default features only — no backend selection yet, the
# render layer drives stdout directly alongside the libghostty pane painter.
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# libghostty is our canonical terminal backend (ADR-0008). Both phux-protocol
# and phux-server depend on it — phux-protocol re-exports types, phux-server
# drives the emulator.
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs.git", rev = "acc4b8754d83aa8506960971787d68f84ddec869", version = "0.1", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.bench]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# Profile for sampling profilers (samply, perf). Inherits release codegen
# so the hot path matches production, but keeps line-table debug info and
# symbols so flame views resolve to source. See `just profile`.
[profile.profiling]
inherits = "release"
debug = 1
strip = "none"
