[workspace]
resolver = "3"
members = ["crates/*"]
# Browser/wasm consumers (phux-486) live under clients/ and target wasm32 only.
# They are their own cargo workspaces so the native `cargo build --workspace`
# (and CI) never tries to build wasm-bindgen crates for the host.
exclude = ["clients"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phall1/phux"
authors = ["Phil Hall <phallsignup@gmail.com>"]
homepage = "https://github.com/phall1/phux"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
# Pedantic exceptions: too noisy for our style.
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
# Internal.
phux-protocol = { path = "crates/phux-protocol", version = "0.0.1" }
phux-core = { path = "crates/phux-core", version = "0.0.1" }
phux-server = { path = "crates/phux-server", version = "0.0.1" }
phux-client = { path = "crates/phux-client", version = "0.0.1" }
phux-client-core = { path = "crates/phux-client-core", version = "0.0.1" }
phux-config = { path = "crates/phux-config", version = "0.0.1" }
phux-mcp = { path = "crates/phux-mcp", version = "0.0.1" }

# External.
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Non-blocking, file-backed `tracing` sink. The telemetry foundation needs
# to write logs to a file off the hot path — for the client (which must
# never touch stderr while the alt screen is up) and for a daemonized
# server whose crash must be durable on disk. `tracing-appender` is the
# canonical companion to `tracing-subscriber` (same maintainers, same
# repo), pure-safe Rust, and its `non_blocking` writer offloads file I/O
# to a background thread so a slow disk never stalls a render/PTY-pump
# thread. No alternative in the ecosystem pairs a non-blocking writer with
# the `MakeWriter` trait `tracing-subscriber` expects.
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
bytes = "1"
slotmap = "1"
smallvec = "1.15"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
# East Asian Width + Emoji presentation width lookup for the predict
# layer (phux-9gw.1.4). The predictive-echo state needs to know how many
# terminal cells a Unicode scalar consumes before queueing a prediction —
# width-2 CJK / emoji must advance the predict cursor by 2 cells and
# refuse to predict at `cursor_col + 2 > cols`. `unicode-width` is the
# canonical zero-dep crate for this (Unicode 16, single small table),
# used by `ratatui`, `crossterm`, and `tui-rs`. No alternative ships
# both EAW and emoji presentation tables in a single lookup.
unicode-width = "0.2"
# Grapheme-cluster segmentation for the predict layer (phux-9gw.1.6).
# Multi-codepoint graphemes (flag emoji, ZWJ family sequences, base +
# combining mark) arrive in a key event's `text` as several scalars; the
# predictive-echo state must split that text into clusters with
# `unicode-segmentation`'s `Graphemes` iterator before it can queue and
# later reconcile them as single visual cells. `unicode-width` answers
# "how wide is one scalar"; it does not group scalars into clusters, so
# the two crates are complementary. `unicode-segmentation` is the
# canonical UAX #29 implementation (used by `ratatui`, `bat`, `helix`),
# is pure-safe Rust with no C deps, and is already present in Cargo.lock
# transitively — adding it as a direct dep compiles no new crate.
unicode-segmentation = "1"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
dhat = "0.3"
tokio = { version = "1", features = ["macros", "rt", "net", "io-util", "sync", "signal", "time", "process"] }
portable-pty = "0.9"
# Chrome-layer TUI toolkit for phux-client (status bar, dividers, overlays).
# The boundary (ADR-0020) is now compiler-enforced by the crate split: only
# `phux-client` declares `ratatui`; the pane-interior substrate lives in
# `phux-client-core`, which has no `ratatui` dependency, so a stray
# `use ratatui` there fails to compile. See epic phux-5ke. Default features
# only — the render layer drives stdout directly alongside the libghostty
# pane painter.
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
# libghostty is our canonical terminal backend (ADR-0008). Both phux-protocol
# and phux-server depend on it — phux-protocol re-exports types, phux-server
# drives the emulator.
libghostty-vt = { git = "https://github.com/phall1/libghostty-rs.git", rev = "6d49dfdeeb4915237615e0cd6e03046b6f96dfa3", version = "0.1", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.bench]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# Profile for sampling profilers (samply, perf). Inherits release codegen
# so the hot path matches production, but keeps line-table debug info and
# symbols so flame views resolve to source. See `just profile`.
[profile.profiling]
inherits = "release"
debug = 1
strip = "none"
