[package]
name = "phux-web"
description = "phux browser client: renders terminals over the wire with the ghostty-vt engine."
version = "0.0.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phall1/phux"
authors = ["Phil Hall <phallsignup@gmail.com>"]
publish = false

# Standalone workspace (wasm-only); excluded from the native phux workspace.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phux-vt-web = { path = "../phux-vt-web" }
# The browser client speaks the exact Rust wire codec (ADR-0023 made it wasm-safe).
phux-protocol = { path = "../../crates/phux-protocol" }
bytes = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "Location",
    "console",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
