[package]
name = "phux-client"
description = "phux TUI client: composes panes + chrome, emits VT to the outer terminal."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
phux-protocol = { workspace = true, features = ["server"] }
phux-core.workspace = true
# phux-nz4.5: status-bar composer (`StatusBar`) + widget contract live
# in phux-config; the client owns rendering the composed bar to VT.
phux-config.workspace = true
# phux-nz4.5: TOML values reach the status-bar painter's tests via
# `WidgetSpec::opts`; dev-only use, declared here for `toml::Value`
# constructor access.
toml = { workspace = true }
# Under ADR-0013 the client runs its own libghostty Terminal per attached
# pane. Pulled in as a direct dep (was transitive via phux-protocol's
# server feature) so the client can construct and drive a Terminal +
# RenderState without depending on protocol-internal modules.
libghostty-vt.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Async I/O + UDS transport for the attach loop (phux-9gw.3). The workspace
# tokio dep enables `net`, `io-util`, `signal`, `macros`, `rt`. The attach
# loop also needs `io-std` for `tokio::io::stdin()`; layer it on locally so
# other consumers don't pay for the extra `BlockingStdin` helper thread.
tokio = { workspace = true, features = ["io-std"] }
# Frame encode/decode produces and consumes `BytesMut`; the attach loop owns
# these buffers across its read and write halves.
bytes.workspace = true
# Raw-mode + alt-screen toggling on the outer terminal needs safe `termios(3)`
# access. `rustix` is a pure-Rust wrapper that keeps phux-client's
# `#![forbid(unsafe_code)]` intact — preferred over a direct `libc` dep
# (which would require relaxing the unsafe lint) and over `crossterm` (which
# pulls its own event loop we don't use). Only the `termios` feature group
# is enabled; rustix's default crate-feature set is opt-in beyond that.
rustix = { version = "0.38", default-features = false, features = ["std", "termios"] }
# phux-9gw.1.4: width-aware UTF-8 prediction. The predict layer must
# know how many terminal cells a Unicode scalar consumes before
# queueing a prediction — width 0 (combining) is skipped, width 1
# advances the cursor by one column, width 2 (CJK / wide emoji)
# advances by two. `unicode-width` is the canonical zero-dep crate for
# this (Unicode 16, single small table); no alternative ships both
# EAW and emoji presentation tables.
unicode-width = { workspace = true }
# phux-4li.3: the client-side layout mirror persists itself server-side
# via the L3 metadata key `phux.tui.layout/v1` (ADR-0019 decision 1).
# SPEC §7.4 recommends CBOR for metadata values, and the layout
# envelope is `{version, root: LayoutNode, focus: TerminalId}`.
# `ciborium` is already transitively in Cargo.lock (criterion pulls it
# in for dev), it is pure-safe Rust with no C deps, serde-native, and
# under active maintenance — unlike `serde_cbor`, which has been
# unmaintained since 2021 and is not in the lock file. `ciborium`'s
# direct deps (`ciborium-io`, `ciborium-ll`, `half`) are all small and
# already present in our tree, so adding it as a direct dep costs no
# new compiled crates.
ciborium = "0.2"
# phux-4li.3: serde-derive shims for the CBOR envelope (`CborEnvelope`,
# `CborLayoutNode`, `CborTerminalId`). The wire-side `LayoutNode` and
# `TerminalId` don't derive Serialize/Deserialize (phux-protocol
# avoids the serde dependency to keep its near-empty-shell publish
# profile per ADR-0011), so the layout module mirrors the shapes
# locally with serde derives and converts via `From`. Already a
# workspace dep (used by phux-config, phux-server, etc.).
serde = { workspace = true }

[dev-dependencies]
phux-server.workspace = true
proptest.workspace = true
insta.workspace = true
