[package]
name = "phux-client"
description = "phux TUI client: composes panes + chrome, emits VT to the outer terminal."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
phux-protocol = { workspace = true, features = ["server"] }
phux-core.workspace = true
# phux-0fv (ADR-0020): the ratatui-free pane-interior substrate — layout
# math, multi-pane composition, predictive echo. This crate (the chrome +
# attach loop) depends on it; never the reverse. The split makes the
# `ratatui`-confinement boundary compiler-enforced: `phux-client-core` has
# no `ratatui` dependency, so a stray `use ratatui` there fails to build.
phux-client-core.workspace = true
# `phux snapshot` deserializes the `GET_SCREEN` JSON contract
# (`phux_core::ScreenState`, ADR-0022 §2) returned by the server.
serde_json.workspace = true
# phux-nz4.5: status-bar composer (`StatusBar`) + widget contract live
# in phux-config; the client owns rendering the composed bar to VT.
phux-config.workspace = true
# phux-r82.5: the TUI executes plugin manifest actions through the same
# child-process runtime `phux config run` uses -- workspace-internal crate,
# no new external surface. The attach driver spawns the run off the input
# loop and toasts captured failure output.
phux-plugin.workspace = true
# phux-nz4.5: TOML values reach the status-bar painter's tests via
# `WidgetSpec::opts`; dev-only use, declared here for `toml::Value`
# constructor access.
toml = { workspace = true }
# Under ADR-0013 the client runs its own libghostty Terminal per attached
# pane. Pulled in as a direct dep (was transitive via phux-protocol's
# server feature) so the client can construct and drive a Terminal +
# RenderState without depending on protocol-internal modules.
libghostty-vt.workspace = true
# Chrome-layer TUI toolkit (status bar, dividers, overlays). Lives only in
# this crate; the pane-interior substrate is in `phux-client-core`, which
# has no `ratatui` dependency, so the boundary (ADR-0020) is enforced by the
# compiler rather than the retired grep guard. See epic phux-5ke.
ratatui = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
# Async I/O + UDS transport for the attach loop (phux-9gw.3). The workspace
# tokio dep enables `net`, `io-util`, `signal`, `macros`, `rt`. The attach
# loop also needs `io-std` for `tokio::io::stdin()`; layer it on locally so
# other consumers don't pay for the extra `BlockingStdin` helper thread.
tokio = { workspace = true, features = ["io-std"] }
# Frame encode/decode produces and consumes `BytesMut`; the attach loop owns
# these buffers across its read and write halves.
bytes.workspace = true
# Raw-mode + alt-screen toggling on the outer terminal needs safe `termios(3)`
# access. `rustix` is a pure-Rust wrapper that keeps phux-client's
# `#![forbid(unsafe_code)]` intact — preferred over a direct `libc` dep
# (which would require relaxing the unsafe lint) and over `crossterm` (which
# pulls its own event loop we don't use). Only the `termios` feature group
# is enabled; rustix's default crate-feature set is opt-in beyond that.
rustix = { version = "0.38", default-features = false, features = ["std", "termios"] }
# `phux run` / `phux snapshot` deserialize the server's JSON contracts
# (run result, `GET_SCREEN` screen state) via serde derives. The layout
# CBOR envelope and the predict layer (which also needed serde, ciborium,
# unicode-width, and unicode-segmentation) moved to `phux-client-core` with
# phux-0fv, so those deps are declared there now, not here.
serde = { workspace = true }
# Shared remote-transport establishment (phux-v45.3): QUIC/WS dialing, the
# fingerprint-pin TLS trust policy, and the bearer-token auth moved to
# `phux-dial` so the federation hub's outbound dialer (phux-server) reuses
# the identical stack. The attach modules re-export its types under the
# established `crate::attach::{quic,ws}` paths.
phux-dial.workspace = true
# QUIC stream types (phux-y8v6, ADR-0007): `connection.rs` holds the quinn
# endpoint/connection/stream halves phux-dial's establishment returns and
# frames over them; same stack the server's `QuicListener` uses.
quinn = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }

[dev-dependencies]
phux-server.workspace = true
# QUIC dialer round-trip test (tests/quic_dial.rs) stands up a real quinn
# server with a self-signed cert in a tempdir and dials it via Connection.
tempfile.workspace = true
# The dial round-trip tests build the *server* side of the transports the
# production code establishes through phux-dial: a rustls TLS 1.3 config
# for the mock quinn listener and a tungstenite `accept_async` WebSocket
# peer. Test-only since phux-v45.3 moved the client-side stack to phux-dial.
rustls = { workspace = true }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
proptest.workspace = true
insta.workspace = true
# Test-only: capture the apply-vs-paint child spans `handle_server_frame`
# emits into an in-memory buffer to prove the split is observable (the
# flywheel's apply-ms vs paint-ms signal). A scoped `set_default`
# subscriber, never the production `telemetry::init`. Workspace dep, no
# new external surface.
tracing-subscriber = { workspace = true }
tracing-core = { workspace = true }
