[package]
name = "phux-config"
description = "Config (TOML) loader + status-bar widget contract for phux."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
phux-protocol = { workspace = true, features = ["server"] }
serde.workspace = true
# Used to build `Cell::text` inline; matches phux-protocol's storage type
# for `Cell::text` (see phux-x7a).
smallvec.workspace = true
toml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Inline (scoped to this crate) per phux-nz4.4 guidance: used only by the
# `time` status-bar widget for strftime-style formatting. No workspace dep
# yet because no other crate consumes chrono.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
insta.workspace = true
tempfile = "3"
