[package]
name = "phux-core"
description = "Core domain types for phux: sessions, windows, panes, layout."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
slotmap.workspace = true

[dev-dependencies]
proptest.workspace = true
