[package]
name = "phux-core"
description = "Core domain types for phux: sessions, windows, panes, layout."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
slotmap.workspace = true
# `ScreenState` (the agent-surface read shape, ADR-0022) is the one
# serialized domain type: the server produces it, the CLI emits it as the
# stable JSON contract. Pure data — no I/O — so it lives here, shared.
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
