[package]
name = "phux-dial"
description = "phux shared outbound dialer: QUIC and WebSocket transport establishment with bearer-token auth and certificate-fingerprint pinning (ADR-0007, ADR-0031, ADR-0038)."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# QUIC_ALPN lives in `phux_protocol::policy`; default features keep this
# crate on the protocol shell (no libghostty graph) — the dialer moves
# bytes, it never decodes frames.
phux-protocol.workspace = true
thiserror.workspace = true
tokio.workspace = true
# QUIC dialer (ADR-0007): same quinn stack + features as the server's
# `QuicListener` and the client's attach loop (workspace dep).
quinn.workspace = true
# rustls client config: TLS 1.3 with a fingerprint-pinning (or loopback
# skip-verify) server-cert verifier. Same `ring` provider both ends.
rustls.workspace = true
# TLS-over-TCP for `wss://` dialing; same features as the server side.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
# Native WebSocket client handshake; one binary message per phux frame.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# SHA-256 of the server's leaf certificate, matched against the
# out-of-band fingerprint pin `phux pair` prints.
sha2 = "0.10"
# Decode the pairing token (hex) into the raw bytes the QUIC preamble carries.
hex = "0.4"
