[package]
name = "phux-plugin"
description = "Plugin action runtime contracts for phux consumers."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
phux-config.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "time"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "process", "time"] }
